Saving To Github

--- a/pwpb.css
+++ b/pwpb.css
@@ -8,6 +8,7 @@
 .image {
   width: 400px !important;
   margin-left: 50px;
+  z-index: 1000;
 }
 .image1 {
   margin-top: -600px;
@@ -19,24 +20,28 @@
   color: #fff;
   font-weight: bold;
   font-family: Comic Sans MS;
+  z-index: 1000;
 }
 #hosting {
   margin-right: 30px;
   color: #fff;
   font-weight: bold;
   font-family: Comic Sans MS;
+  z-index: 1000;
 }
 #paket {
   margin-right: 30px;
   color: #fff;
   font-weight: bold;
   font-family: Comic Sans MS;
+  z-index: 1000;
 }
 #contact {
   margin-right: 30px;
   color: #fff;
   font-weight: bold;
   font-family: Comic Sans MS;
+  z-index: 1000;
 }
 .jumbotron {
   background-image: url(image/wp2827973-abstract-background.png);
@@ -46,6 +51,7 @@
   width: auto;
   height: 657px;
   text-align: center;
+  z-index: 1000;
 }
 .jumbotron::after {
   content: "";
@@ -67,6 +73,7 @@
   margin-top: 250px;
   margin-left: -750px;
   font-weight: 10px;
+  z-index: 1000;
 }
 .jumbotron .display-42 {
   font-size: 60px;
@@ -75,6 +82,7 @@
   margin-left: -660px;
   margin-top: 00px;
   font-weight: 10px;
+  z-index: 1000;
 }
 .lead {
   font-size: 25px !important;
@@ -105,6 +113,10 @@
   background-color: orange;
   border-radius: 100px;
   border: 10px;
+  z-index: 100000000000 !important;
+}
+#button {
+  z-index: 100000;
 }
 .paket {
   text-align: center;
